# sis-rules-engine-demo

./: Dockerfile  KERNEL.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: access_request.md
docs/: SIS_Intake_Form.md  SIS_Pricing.md  SIS_SOW_Template.md
examples/arm/: template.json
examples/cloudformation/: template.yaml
examples/docker_compose/: compose.yaml
examples/expected/: arm.json  cloudformation.json  docker_compose.json  kubernetes.json  terraform.json
examples/kubernetes/: manifest.yaml
examples/terraform/: main.tf
frozen-kernel-hardhat/: deployment.json  hardhat.config.cjs  package-lock.json  package.json
frozen-kernel-hardhat/cache/: solidity-files-cache.json
frozen-kernel-hardhat/contracts/: AdapterRegistry.sol  AgentVault.sol  DisputeModule.sol  EpochManager.sol  FeeSplitter.sol  ReceiptRegistry.sol  TestToken.sol
frozen-kernel-hardhat/scripts/: deploy.cjs
frozen-kernel-hardhat/test/: AdapterRegistry.test.cjs  AgentVault.test.cjs  DisputeModule.test.cjs  EpochManager.test.cjs  FeeSplitter.test.cjs  ReceiptRegistry.test.cjs  check-all-signers.test.cjs  debug.test.cjs
frozen-kernel-hardhat/test/helpers/: deployKernel.cjs
frozen-kernel-hardhat/utils/: signatureHelper.js
rules/: demo.json
src/sis/: __init__.py  cli.py  engine.py  main.py  report.py
src/sis/api/: __init__.py  endpoints.py  schemas.py
src/sis/parsers/: __init__.py  arm.py  cloudformation.py  docker_compose.py  kubernetes.py  terraform.py
tests/: test_engine.py
tests/test_vectors/admin_override/: test_admin_01.json
(+26 files in other folders)
